--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
+# Configuração das URLs da API
+# Desenvolvimento
 VITE_API_URL=http://localhost:5000
 VITE_BACKEND_URL=http://localhost:5000
+
+# Produção (exemplo)
+# VITE_API_URL=https://sorttimes-backend.onrender.com
+# VITE_BACKEND_URL=https://sorttimes-backend.onrender.com
