--- a/package.json
+++ b/package.json
@@ -6,39 +6,40 @@
   "scripts": {
     "dev": "vite --force",
     "build": "vite build --mode production",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "axios": "^1.6.7",
-    "chart.js": "^4.4.1",
+    "@vitejs/plugin-react": "^4.4.1",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.0.3",
-    "html-to-image": "^1.11.11",
+    "framer-motion": "^12.10.5",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "lucide-react": "^0.323.0",
-    "pdfkit": "^0.14.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.22.0",
-    "react-toastify": "^10.0.4",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
-    "styled-components": "^6.1.8",
-    "uuid": "^9.0.1"
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.503.0",
+    "pdfkit": "^0.17.1",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.18",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.9",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.3"
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "vite": "^6.3.2"
   }
 }
