--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.10.5",
     "html-to-image": "^1.11.13",
